# dearx

./: Cargo.toml
crates/dearx_gfx/: Cargo.toml  build.rs
crates/dearx_gfx/dearx_gfx/proto/: dearx.proto
crates/dearx_gfx/dearx_gfx/resources/shaders/: triangle.vs
crates/dearx_gfx/dearx_gfx/src/: lib.rs
crates/dearx_gfx/dearx_gfx/src/component/: mod.rs  transform_component.rs
crates/dearx_gfx/dearx_gfx/src/experimental/: mod.rs
crates/dearx_gfx/dearx_gfx/src/serializer/: serializer.rs
crates/dearx_gfx/dearx_viewer/: Cargo.toml  build.rs
crates/dearx_gfx/dearx_viewer/proto/: dearx_viewer.proto
crates/dearx_gfx/dearx_viewer/proto/dearx/: primitives.proto
crates/dearx_gfx/dearx_viewer/src/: lib.rs
crates/dearx_gfx/dearx_viewer/src/detail/: server_get_logic.rs
crates/dearx_gfx/dearx_viewer/src/http/: client.rs  mod.rs  server.rs
crates/dearx_gfx/dearx_viewer/tests/: simple.rs
crates/dearx_gfx/examples/: dearx_viewer.rs  render_wgpu.rs
crates/dearx_gfx/resources/models/: CubePrimitive.usda  cube.usda
crates/dearx_gfx/resources/shaders/: basic.vs  triangle.fs  triangle.vs
crates/dearx_gfx/src/: api.rs  lib.rs  scene.rs
crates/dearx_gfx/src/component/: geometry_component.rs
crates/dearx_gfx/src/renderer/: mod.rs  renderer.rs  scene.rs
crates/dearx_gfx/src/renderer/container/: mod.rs  table.rs  vector.rs
crates/dearx_gfx/src/renderer/wgpu/: command_buffer.rs  draw_info.rs  factory.rs  mod.rs  scene.rs
crates/dearx_gfx/src/serializer/: deserializer.rs  mod.rs  serializer.rs
crates/dearx_gfx/tests/: simple.rs
crates/dearx_viewer/: Cargo.toml  build.rs
crates/dearx_viewer/proto/: dearx_viewer.proto
crates/dearx_viewer/src/: communicator.rs  embeded_server.rs  i_server_logic.rs  lib.rs  proto.rs
crates/dearx_viewer/src/detail/: mod.rs
crates/dearx_viewer/src/http/: client.rs  mod.rs  server.rs  server_reply.rs
crates/dearx_viewer/src/wgpu/: mod.rs
dearx_app/: Cargo.toml
dearx_app/examples/: simple_app.rs
dearx_app/src/: lib.rs  manipulator.rs
dearx_app/src/model/: document_state.rs  mod.rs  scene_state.rs
dearx_edit_model/: Cargo.toml
dearx_edit_model/src/: float3.rs  game_object.rs  lib.rs
dearx_edit_model/src/components/: geometry_component.rs  mod.rs  static_mesh_component.rs  transform_component.rs
dearx_editor/: Cargo.toml  package.json  tauri.conf.json
dearx_editor/public/: index.html
dearx_editor/src/: App.js  lib.rs  main.rs  main_window_view_model.rs  object_tree_view_model.rs  property_window_view_model.rs
dearx_editor/src-tauri/: Cargo.toml  tauri.conf.sycamore.json
dearx_editor/src-tauri/src/: lib.rs  main.rs  main_window_view_model.rs  object_tree_view_model.rs  property_window_view_model.rs
dearx_editor/src/services/: active_document_manager.rs  mod.rs
dearx_gfx/: Cargo.toml  build.rs
dearx_gfx/dearx_gfx/: Cargo.toml  build.rs
dearx_gfx/dearx_gfx/src/: lib.rs
dearx_gfx/dearx_gfx/src/component/: geometry_component.rs
dearx_gfx/dearx_gfx/src/domain/: mod.rs
dearx_gfx/dearx_viewer/: Cargo.toml  build.rs
dearx_gfx/dearx_viewer/examples/: http_server.rs  http_viewer.rs
dearx_gfx/dearx_viewer/proto/: dearx_viewer.proto
dearx_gfx/dearx_viewer/src/: lib.rs  proto.rs
dearx_gfx/dearx_viewer/src/http/: client.rs  server.rs
dearx_gfx/examples/: client_cli.rs  dearx_viewer.rs  render_server.rs  server_cli.rs
dearx_gfx/proto/: dearx.proto
dearx_gfx/resources/shaders/: basic.fs  basic.vs
dearx_gfx/src/: lib.rs  main.rs  renderer.rs  scene.rs
dearx_gfx/src/component/: geometry_component.rs  transform_component.rs
dearx_gfx/src/domain/: float3.rs
dearx_gfx/src/experimental/: mod.rs
dearx_gfx/src/viewer/: client.rs  listener.rs  proto.rs  server.rs
dearx_presentation/: Cargo.toml  build.rs  index.html  index.js
dearx_presentation/dearx_tool_windows/: Cargo.toml
dearx_presentation/dearx_tool_windows/src/: lib.rs  object_tree_view_model.rs  property_window_view_model.rs
dearx_presentation/resources/shaders/: grid.fs  grid.vs
dearx_presentation/src/: lib.rs
dearx_presentation/src/design_view/: mod.rs
dearx_presentation/src/property_window/: mod.rs
dearx_presentation/sycamore/: Cargo.toml  index.html
dearx_presentation/sycamore/src/: main.rs
dearx_presentation/sycamore/src/js/: mod.rs
dearx_serialization/: Cargo.toml
dearx_viewer/: Cargo.toml  build.rs
dearx_viewer/examples/: client_cli.rs  render_server.rs  server_cli.rs
dearx_viewer/resources/: dearx.proto
dearx_viewer/src/: client.rs  lib.rs  main.rs  proto.rs  server.rs
dearx_workspace/: Cargo.toml
dearx_workspace/examples/: simple_workspace.rs
dearx_workspace/src/: document.rs  document_info.rs  lib.rs
editor/0_dearx_previewer/: Cargo.toml
editor/0_dearx_previewer/src/: main.rs
editor/0_dearx_server/: Cargo.toml
editor/0_dearx_server/src/: main.rs
editor/0_standalone/dearx_previewer/: Cargo.toml
editor/0_standalone/dearx_previewer/src/: main.rs
editor/1_dearx_presentation/dearx_tool_windows/: Cargo.toml
editor/1_dearx_presentation/dearx_tool_windows/src/: main_window_view_model.rs  object_tree_view_model.rs  property_window_view_model.rs
editor/2_dearx_application/: Cargo.toml
editor/2_dearx_application/examples/: simple_app.rs  simple_gui.rs
editor/2_dearx_application/src/: app.rs  lib.rs  viewer.rs
standalone/: Cargo.toml
standalone/dearx_previewer/: Cargo.toml
standalone/dearx_previewer/src/: main.rs
standalone/dearx_server/: Cargo.toml
standalone/dearx_server/src/: main.rs
standalone/debug_editor/src/: main.rs
standalone/internal_crates/1_dearx_presentation/dearx_tool_windows/: Cargo.toml
standalone/internal_crates/1_dearx_presentation/sycamore/: Cargo.toml
standalone/internal_crates/2_dearx_application/: Cargo.toml
standalone/internal_crates/2_dearx_application/examples/: simple_gui.rs
standalone/internal_crates/2_dearx_application/src/: app.rs  lib.rs
standalone/internal_crates/3_dearx_edit_model/: Cargo.toml
standalone/internal_crates/3_dearx_edit_model/src/: float3.rs  lib.rs
standalone/simple_editor/src/: main.rs
ui/: index.html
(+34 files in other folders)
