[workspace]
resolver = "2"
members = [
    "crates/dearx_gfx/dearx_gfx",
    "crates/dearx_gfx/dearx_viewer",
    "crates/dearx_macro",
    "crates/dearx_workspace",
    # "dearx_app",
    "editor/0_dearx_editor/src-tauri",
    "editor/0_dearx_previewer/",
    "editor/1_dearx_presentation/sycamore",
    "editor/1_dearx_presentation/dearx_tool_windows",
    "editor/2_dearx_application",
    "editor/3_dearx_edit_model",
]
