[workspace]
resolver = "2"
members = [
    "crates/dearx_gfx",
    "crates/dearx_viewer",
    "crates/dearx_macro",
    "crates/dearx_workspace",
    "standalone",
    # "standalone/internal_crates/1_dearx_presentation/sycamore",
    # "standalone/internal_crates/1_dearx_presentation/dearx_tool_windows",
    "standalone/internal_crates/2_dearx_application",
    "standalone/internal_crates/3_dearx_edit_model",
]
