[package]
name = "dearx_edit_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
im = "*"
sje_generator_macro = { git = "https://github.com/dearshuto/sj_editor_framework_rs.git" }
