[package]
name = "dearx_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
epi = "0.16"
egui = "0.18.1"
egui_winit_platform = "0.13"
eframe = "*"
tokio = { version = "1.18.2", features = ["full"] }
gfx-egui = { git = "https://github.com/dearshuto/gfx-rs.git" }
sjgfx-interface = { git = "https://github.com/dearshuto/gfx-rs.git" }
sjgfx = { git = "https://github.com/dearshuto/gfx-rs.git" }
sjvi = { git = "https://github.com/dearshuto/gfx-rs.git" }
sje_workspace = { git = "https://github.com/dearshuto/sj_editor_framework_rs.git" }
dearx_app = { path = "../dearx_app" }
dearx_edit_model = { path = "../dearx_edit_model" }