[package]
name = "dearx_gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sjgfx-util = { git = "https://github.com/dearshuto/gfx-rs.git", branch = "develop" }
sjgfx-interface = { git = "https://github.com/dearshuto/gfx-rs.git", branch = "develop" }
sjgfx = { git = "https://github.com/dearshuto/gfx-rs.git", branch = "develop" }
nalgebra-glm = "0.3"

[dev-dependencies]
sjvi = { git = "https://github.com/dearshuto/gfx-rs.git", branch = "develop" }

[build-dependencies]
sjgfx-util = { git = "https://github.com/dearshuto/gfx-rs.git", branch = "develop" }