[package]
name = "dearx_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "*"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}

[build-dependencies]
tonic-build = { version = "0.8.3", features = ["prost"] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}