[package]
name = "dearx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dearx_previewer"
path = "dearx_previewer/src/main.rs"

[[bin]]
name = "dearx_server"
path = "dearx_server/src/main.rs"

[[bin]]
name = "simple_editor"
path = "simple_editor/src/main.rs"

[[bin]]
name = "debug_editor"
path = "debug_editor/src/main.rs"

[dependencies]
bytemuck = "*"
egui = "0.21.0"
eframe = { version = "*", features = ["wgpu"] }
egui-wgpu = "*"
im = "*"
num-traits = "0.2"
tokio = { version = "1.0.0", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
winit = "*"
wgpu = { version = "0.16.0", features = ["spirv"] }
dearx_application = { path = "internal_crates/2_dearx_application" }
dearx_edit_model = { path = "internal_crates/3_dearx_edit_model" }
dearx_gfx = { path = "../crates/dearx_gfx" }
dearx_viewer = { path = "../crates/dearx_viewer" }
dearx_macro = { path = "../crates/dearx_macro" }
dearx_workspace = { path = "../crates/dearx_workspace" }
