[package]
name = "dearx_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14" }
chrono = "*" # http::Server の試験実装用。将来的に消す
prost = { version = "0.11" }
hyper = "*"
bytes = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.8.3" }
warp = "0.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic = { version = "0.8.3", default-features = false }

[build-dependencies]
tonic-build = { version = "0.8.3", features = ["prost"] }

[dev-dependencies]
wgpu = "0.15.1"
winit = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.25.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
