[package]
name = "dearx_tool_windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# form dearx
dearx_macro = { path = "../../dearx_macro" }
dearx_edit_model = { path = "../../dearx_edit_model" }
dearx_workspace = { path = "../../dearx_workspace" }