[package]
name = "sycamore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-wasm-bindgen = "0.4.3"
serde = { version = "1.0.140", features = ["derive"] }
sycamore = "0.8"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "*"
js-sys = "0.3.59" 