[package]
name = "dearx_previewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
wgpu = "0.15.1"
dearx_viewer = { path = "../../crates/dearx_gfx/dearx_viewer" }
tokio = { version = "1.0.0", features = ["full"] }
