[package]
name = "dearx_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dearx_application = { path = "../2_dearx_application" }
dearx_viewer = { path = "../../crates/dearx_gfx/dearx_viewer" }
tokio = { version = "1.0.0", features = ["full"] }
