[package]
name = "dearx_application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
dearx_edit_model = { path = "..//3_dearx_edit_model" }
dearx_viewer = { path = "../../crates/dearx_gfx/dearx_viewer" }
dearx_workspace = { path = "../../crates/dearx_workspace" }
dearx_macro = { path = "../../crates/dearx_macro" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
egui = "0.21.0"
eframe = "*"
