[package]
name = "dearx_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dearx_application = { path = "../../2_dearx_application" }
dearx_viewer = { path = "../../crates/dearx_viewer" }
dearx_workspace = { path = "../../crates/dearx_workspace" }
tokio = { version = "1.0.0", features = ["full"] }
