[package]
name = "dearx_tool_windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# form dearx
dearx_macro = { path = "../../../crates/dearx_macro" }
dearx_workspace = { path = "../../../crates/dearx_workspace" }
dearx_edit_model = { path = "../../2_dearx_edit_model" }
