[package]
name = "dearx_edit_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
im = "*"
num-traits = "0.2"
dearx_macro = { path = "../../../crates/dearx_macro" }
dearx_workspace = { path = "../../../crates/dearx_workspace" }
